Update dpkg-buildpackage's manual page
* man/dpkg-buildpackage.1: Give a detailed explanation of what the
command does. Drop any duplicate information contained in the
dpkg-genchanges/dpkg-source manual pages.
* man/dpkg-genchanges.1: Document the -A option (was missing).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
-2008-07-10 Guillem Jover  <guillem@debian.org>
+2008-07-10  Raphael Hertzog  <hertzog@debian.org>
+
+	* man/dpkg-buildpackage.1: Give a detailed explanation of what the
+	command does. Drop any duplicate information contained in the
+	dpkg-genchanges/dpkg-source manual pages.
+	* man/dpkg-genchanges.1: Document the -A option (was missing).
+
+2008-07-10  Guillem Jover  <guillem@debian.org>
 
 	* lib/dpkg-priv.h (min, max): New macros.
 	* lib/tarfn.c: Include <dpkg-priv.h>.
