--- a/man/dpkg-genchanges.1
+++ b/man/dpkg-genchanges.1
@@ -16,10 +16,10 @@ file
 .
 .SH OPTIONS
 .TP
-.BR \-b ", " \-B
+.BR \-b ", " \-B ", " \-A
 Specifies that a binary-only build is taking place (no source files are
-to be included). There's no distinction between \fB\-b\fP and \fB\-B\fP,
-the produced
+to be included). There's no distinction between \fB\-b\fP, \fB\-B\fP and
+\fB\-A\fP, the produced
 .B .changes
 file will include whatever files were created by the
 .B binary\-*
