Updated Korean translation
	* po/ko.po: Updated to 984t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -79,6 +79,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Portuguese (Miguel Figueiredo).
+  * Korean (Changwoo Ryu).
 
  -- Guillem Jover <guillem@debian.org>  Tue, 29 Apr 2008 06:01:40 +0300
 
