--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-19  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated to 984t.
+
 2008-06-09  Felipe Augusto van de Wiel  <faw@debian.org>
 
 	* pt_BR.po: Updated to 984t.
