Updated Korean translation
Updated to 984t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * Russian (Yuri Kozlov) . Closes: #490076
 
   [ Updated dpkg translations ]
+  * Korean (Changwoo Ryu).
   * Thai (Theppitak Karoonboonyanan). Closes: #488090
   * Romanian (Eddy Petrișor).
   * Russian (Yuri Kozlov). Closes: #488689
