--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * Russian (Yuri Kozlov) . Closes: #490076
 
   [ Updated dpkg translations ]
+  * Basque (Piarres Beobide). Closes: #490905
   * Korean (Changwoo Ryu).
   * Thai (Theppitak Karoonboonyanan). Closes: #488090
   * Romanian (Eddy Petrișor).
