--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-22  Piarres Beobide  <pi+debian@beobide.net>
+
+	* eu.po: Updated to 984t.
+
 2008-07-19  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated to 984t.
