--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-22  Guillem Jover  <guillem@debian.org>
+
+	* src/query.c (ignoredependss): Remove unused variable.
+
 2008-07-10  Raphael Hertzog  <hertzog@debian.org>
 
 	* man/dpkg-buildpackage.1: Give a detailed explanation of what the
