--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-07-22  Guillem Jover  <guillem@debian.org>
 
+	* src/main.h (struct packageinlist): Change 'void *xinfo' member to
+	'struct pkginfo *pkg_removal'. Fix all users.
+
+2008-07-22  Guillem Jover  <guillem@debian.org>
+
 	* src/main.h (ignoredependss): Change type to 'struct pkginqueue'.
 	* src/main.c (ignoredependss): Likewise.
 	(ignoredepends): Change type for variable 'ni' to 'struct pkginqueue'.
