Rename struct packageinlist to pkg_deconf_list

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-07-22  Guillem Jover  <guillem@debian.org>
 
+	* src/main.h (struct packageinlist): Rename to ...
+	(struct pkg_deconf_list): ... this. Fix all users.
+
+2008-07-22  Guillem Jover  <guillem@debian.org>
+
 	* src/main.h (struct packageinlist): Change 'void *xinfo' member to
 	'struct pkginfo *pkg_removal'. Fix all users.
 
