Unify translation of "diversion" and one more paragraph in man page translated

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-22  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po Unify translation of "diversion"
+	* po/de.po Update to 1594t0f7u.
+
 2008-06-22  Florent USSEIL  <swiip81@free.fr>
 
 	* po/fr.po: Updated to 1601t.
