--- a/man/po/de.po
+++ b/man/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2008-06-03 21:58+0200\n"
-"PO-Revision-Date: 2008-06-03 22:46+0200\n"
+"PO-Revision-Date: 2008-07-22 19:00+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -3543,8 +3543,8 @@ msgstr ""
 msgid ""
 "B<overwrite-diverted>: Overwrite a diverted file with an undiverted version."
 msgstr ""
-"B<overwrite-diverted>: Überschreibe eine umgelenkte (»diverted«) Datei mit "
-"einer nicht umgelenkten."
+"B<overwrite-diverted>: Überschreibe eine umgeleitete (»diverted«) Datei mit "
+"einer nicht umgeleiteten."
 
 # type: Plain text
 #: ../../man/dpkg.1:430
@@ -6501,7 +6501,7 @@ msgid ""
 "B<dpkg-divert> is the utility used to set up and update the list of "
 "diversions."
 msgstr ""
-"B<dpkg-divert> ist ein Hilfswerkzeug, um die Liste der Umlenkungen "
+"B<dpkg-divert> ist ein Hilfswerkzeug, um die Liste der Umleitungen "
 "einzurichten und zu aktualisieren."
 
 # type: Plain text
@@ -6515,9 +6515,9 @@ msgid ""
 "'conffiles') need to be preserved by dpkg, when installing a newer version "
 "of a package which contains those files."
 msgstr ""
-"Datei-I<Diversionen> (Umlenkungen) sind eine Möglichkeit, B<dpkg>(1) dazu zu "
+"Datei-I<Diversionen> (Umleitungen) sind eine Möglichkeit, B<dpkg>(1) dazu zu "
 "zwingen, eine Datei nicht an ihren Standardplatz, sondern an einem "
-"I<umgelenkten> Ort zu installieren. Umlenkungen können innerhalb der Debian-"
+"I<umgeleiteten> Ort zu installieren. Umleitungen können innerhalb der Debian-"
 "Paketskripte verwendet werden, um eine Datei beiseitezuschieben, wenn sie "
 "einen Konflikt auslöst. Systemadministratoren können sie auch verwenden, um "
 "sich über die Konfigurationsdateien einiger Pakete hinwegzusetzen, oder wann "
@@ -6534,7 +6534,7 @@ msgstr "[B<--add>] I<Datei>"
 # type: Plain text
 #: ../../man/dpkg-divert.8:28
 msgid "Add a diversion for I<file>."
-msgstr "Fügt eine Umlenkung für I<Datei> hinzu."
+msgstr "Fügt eine Umleitung für I<Datei> hinzu."
 
 # type: TP
 #: ../../man/dpkg-divert.8:28 ../../man/dpkg-statoverride.8:35
@@ -6545,7 +6545,7 @@ msgstr "B<--remove>I< Datei>"
 # type: Plain text
 #: ../../man/dpkg-divert.8:31
 msgid "Remove a diversion for I<file>."
-msgstr "Entferne eine Umlenkung für I<Datei>."
+msgstr "Entferne eine Umleitung für I<Datei>."
 
 # type: TP
 #: ../../man/dpkg-divert.8:31
@@ -6556,7 +6556,7 @@ msgstr "B<--list>I< Glob-Muster>"
 # type: Plain text
 #: ../../man/dpkg-divert.8:34
 msgid "List diversions matching I<glob-pattern>."
-msgstr "Liste Umlenkungen auf, die auf I<Glob-Muster> passen."
+msgstr "Liste Umleitungen auf, die auf I<Glob-Muster> passen."
 
 # type: TP
 #: ../../man/dpkg-divert.8:34
@@ -6567,7 +6567,7 @@ msgstr "B<--truename>I< Datei>"
 # type: Plain text
 #: ../../man/dpkg-divert.8:37
 msgid "Print the real name for a diverted file."
-msgstr "Zeige den echten Namen für eine umgelenkte Datei an."
+msgstr "Zeige den echten Namen für eine umgeleitete Datei an."
 
 # type: TP
 #: ../../man/dpkg-divert.8:39 ../../man/dpkg-statoverride.8:52
@@ -6588,7 +6588,7 @@ msgstr ""
 #: ../../man/dpkg-divert.8:42
 #, no-wrap
 msgid "B<--divert>I< divert-to>"
-msgstr "B<--divert>I< Umlenkziel>"
+msgstr "B<--divert>I< Umleitziel>"
 
 # type: Plain text
 #: ../../man/dpkg-divert.8:46
@@ -6596,8 +6596,8 @@ msgid ""
 "I<divert-to> is the location where the versions of I<file>, as provided by "
 "other packages, will be diverted."
 msgstr ""
-"I<Umlenkziel> ist der Zielort, wo die Versionen der I<Datei>, wie sie von "
-"anderen Paketen bereitgestellt wird, hin umgelenkt werden."
+"I<Umleitziel> ist der Zielort, wo die Versionen der I<Datei>, wie sie von "
+"anderen Paketen bereitgestellt wird, hin umgeleitet werden."
 
 # type: TP
 #: ../../man/dpkg-divert.8:46
@@ -6613,9 +6613,9 @@ msgid ""
 "file is diverted. This can be used by an admin to install a locally modified "
 "version."
 msgstr ""
-"Gibt an, dass alle Versionen dieser Datei umgelenkt sind. Dies bedeutet, "
+"Gibt an, dass alle Versionen dieser Datei umgeleitet sind. Dies bedeutet, "
 "dass es keine Ausnahmen gibt, und egal was für ein Paket auch installiert "
-"ist, die Datei ist umgelenkt. Dies kann vom Administrator verwendet werden, "
+"ist, die Datei ist umgeleitet. Dies kann vom Administrator verwendet werden, "
 "um eine lokal geänderte Version zu installieren."
 
 # type: TP
@@ -6630,8 +6630,8 @@ msgid ""
 "I<package> is the name of a package whose copy of I<file> will not be "
 "diverted. i.e. I<file> will be diverted for all packages except I<package>."
 msgstr ""
-"I<Paket> ist der Name des Pakets, dessen Kopie von I<Datei> nicht umgelenkt "
-"wird, d.h. I<Datei> wird für alle Pakete außer I<Paket> umgelenkt."
+"I<Paket> ist der Name des Pakets, dessen Kopie von I<Datei> nicht umgeleitet "
+"wird, d.h. I<Datei> wird für alle Pakete außer I<Paket> umgeleitet."
 
 # type: TP
 #: ../../man/dpkg-divert.8:57 ../../man/dpkg-statoverride.8:64
@@ -6692,7 +6692,7 @@ msgstr ""
 # type: Plain text
 #: ../../man/dpkg-divert.8:80
 msgid "Directories can't be diverted with B<dpkg-divert>."
-msgstr "Verzeichnisse können mit B<dpkg-divert> nicht umgelenkt werden."
+msgstr "Verzeichnisse können mit B<dpkg-divert> nicht umgeleitet werden."
 
 # type: Plain text
 #: ../../man/dpkg-divert.8:86
@@ -6703,12 +6703,12 @@ msgid ""
 "symlink may end up pointing at the diverted library, if a diverted library "
 "has the same SONAME as the undiverted one."
 msgstr ""
-"Vorsicht sollte beim Umlenken von Laufzeit-Bibliotheken walten gelassen "
+"Vorsicht sollte beim Umleiten von Laufzeit-Bibliotheken walten gelassen "
 "werden, da B<ldconfig>(8) einen symbolischen Link, basierend auf dem in der "
 "Bibliothek eingebetteten DT_SONAME-Feld erstellt. Da ldconfig keine "
-"Umlenkungen anerkennt (nur Dpkg tut dies), kann der Symlink am Ende auf die "
-"umgelenkte Bibliothek zeigen, falls die umgelenkte Bibliothek den gleichen "
-"SONAME wie die nicht umgelenkte hat."
+"Umleitungen anerkennt (nur Dpkg tut dies), kann der Symlink am Ende auf die "
+"umgeleitete Bibliothek zeigen, falls die umgeleitete Bibliothek den gleichen "
+"SONAME wie die nicht umgeleitete hat."
 
 # type: Plain text
 #: ../../man/dpkg-divert.8:91
@@ -6718,7 +6718,7 @@ msgid ""
 "usr/bin/example.foo>, performing the rename if required:"
 msgstr ""
 "Um alle Kopien von I</usr/bin/example> auf I</usr/bin/example.foo> "
-"umzulenken, d.h. alle Pakete, die I</usr/bin/example> zur Verfügung stellen, "
+"umzuleiten, d.h. alle Pakete, die I</usr/bin/example> zur Verfügung stellen, "
 "dazu anzuleiten, diese Datei stattdessen als I</usr/bin/example.foo> zu "
 "installieren und die Umbenennung, falls notwendig, durchzuführen:"
 
@@ -6730,7 +6730,7 @@ msgstr "dpkg-divert --divert /usr/bin/example.foo --rename /usr/bin/example"
 # type: Plain text
 #: ../../man/dpkg-divert.8:95 ../../man/dpkg-divert.8:105
 msgid "To remove that diversion:"
-msgstr "Um diese Umlenkung zu entfernen:"
+msgstr "Um diese Umleitung zu entfernen:"
 
 # type: Plain text
 #: ../../man/dpkg-divert.8:97
@@ -6745,7 +6745,7 @@ msgid ""
 msgstr ""
 "Um für jedes Paket - außer Ihrem eigenen I<wibble>-Paket -, das versucht, I</"
 "usr/bin/example> zu installieren, dieses auf I</usr/bin/example.foo> "
-"umzulenken:"
+"umzuleiten:"
 
 # type: Plain text
 #: ../../man/dpkg-divert.8:103
@@ -6774,7 +6774,7 @@ msgid ""
 "located in the dpkg administration directory, along with other files "
 "important to dpkg, such as I<status> or I<available>."
 msgstr ""
-"Datei, die die aktuelle Liste von Umlenkungen des Systems enthält. Sie "
+"Datei, die die aktuelle Liste von Umleitungen des Systems enthält. Sie "
 "befindet sich im Dpkg-Administrationsverzeichnis, zusammen mit anderen für "
 "Dpkg wichtigen Dateien, wie I<status> oder I<available>."
 
@@ -11956,6 +11956,15 @@ msgid ""
 "the search reaches the bottom of the list, it wraps to the top and continues "
 "searching from there."
 msgstr ""
+"Die Liste der Pakete kann nach Paketnamen durchsucht werden. Dies erfolgt "
+"durch Drücken von B<»/«> und der Eingabe einer einfachen Suchzeichenkette. "
+"Die Zeichenkette wird als regulärer Ausdruck gemäß B<regex>(7) interpretiert. "
+"Falls Sie zu dem Suchausdruck B<»/d«> hinzufügen wird Dselect auch in "
+"Beschreibungen suchen. Falls Sie B<»/i«> hinzufügen, wird Groß-/"
+"Kleinschreibung ignoriert. Sie können die Suffixe wie folgt kombinieren: "
+"B<»/id«>. Wiederholtes Suchen wird durch Drücken von B<»n«> oder B<»\\e«> "
+"erreicht, bis das gewünschte Paket gefunden wurde. Falls die Suche das Ende "
+"der Liste erreicht, springt sie zum Anfang und fährt von dort fort."
 
 # type: Plain text
 #: ../../man/dselect.1:349
@@ -14529,10 +14538,10 @@ msgstr ""
 #~ "be specified."
 #~ msgstr ""
 #~ "B<dpkg-divert> ist das Hilfswerkzeug, das dazu verwendet wird, die Liste "
-#~ "der Umlenkung zu erstellen und zu aktualisieren. Es funktioniert in drei "
-#~ "grundlegenden Modi: Hinzufügen, Entfernen und Auflisten von Umlenkung. "
+#~ "der Umleitungen zu erstellen und zu aktualisieren. Es funktioniert in drei "
+#~ "grundlegenden Modi: Hinzufügen, Entfernen und Auflisten von Umleitungen. "
 #~ "Die Optionen sind respektive B<--add>, B<--remove> und B<--list>. "
-#~ "Zusätzlich kann es den echten Namen für eine umgelenkte Datei mit B<--"
+#~ "Zusätzlich kann es den echten Namen für eine umgeleitete Datei mit B<--"
 #~ "truename> ausgeben. Andere Optionen (unten aufgeführt) können auch "
 #~ "angegeben werden."
 
@@ -14738,12 +14747,12 @@ msgstr ""
 # type: Plain text
 #~ msgid "I<E<lt>divert-toE<gt>> is the name used by other packages' versions."
 #~ msgstr ""
-#~ "I<E<lt>umzulenkendeE<gt>> ist der Name der Datei, der von Versionen "
+#~ "I<E<lt>umzuleitende<gt>> ist der Name der Datei, der von Versionen "
 #~ "anderer Pakete benutzt wird."
 
 # type: Plain text
 #~ msgid "Specifies that all packages' versions are diverted."
-#~ msgstr "Gibt an, dass die Versionen aus allen Paketen umgelenkt sind."
+#~ msgstr "Gibt an, dass die Versionen aus allen Paketen umgeleitet sind."
 
 # type: Plain text
 #~ msgid ""
