--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-22  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Unify translation of "diversion".
+
 2008-07-10  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru.po: Updated to 473t.
