--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-06-09 09:08+0200\n"
-"PO-Revision-Date: 2008-06-09 21:17+0200\n"
+"PO-Revision-Date: 2008-07-22 18:55+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1558,11 +1558,11 @@ msgstr "kann dpkg nicht ausführen"
 
 #: scripts/dpkg-shlibdeps.pl:761
 msgid "diversions involved - output may be incorrect"
-msgstr "Umlenkungen beteiligt - Ausgabe könnte nicht korrekt sein"
+msgstr "Umleitungen beteiligt - Ausgabe könnte nicht korrekt sein"
 
 #: scripts/dpkg-shlibdeps.pl:763
 msgid "write diversion info to stderr"
-msgstr "schreibe Informationen zu Umlenkungen auf Stderr"
+msgstr "schreibe Informationen zu Umleitungen auf Stderr"
 
 #: scripts/dpkg-shlibdeps.pl:767
 #, perl-format
