Move duplicate limiteddescription functions to src/pkg-show.c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2008-07-26  Guillem Jover  <guillem@debian.org>
 
+	* src/Makefile.am (dpkg_SOURCES): Add 'pkg-show.c'.
+	(dpkg_query_SOURCES): Likewise.
+	* src/main.h (limiteddescription): New function prototype.
+	* src/enquiry.c (limiteddescription): Move function to ...
+	* src/pkg-show.c: ... here. New file.
+	* src/query.c (limiteddescription): Remove duplicate function.
+
+2008-07-26  Guillem Jover  <guillem@debian.org>
+
 	* lib/showpkg.c (parseformat): Do not set cur->type to field, as
 	that's set in parsefield.
 
