Modified French translation: use 'action différée' for 'trigger'

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-26  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: replace "déclenchement" by "action différée"
+
 2008-07-22  Piarres Beobide  <pi+debian@beobide.net>
 
 	* eu.po: Updated to 984t.
@@ -14,7 +18,7 @@
 
 	* ru.po: Updated to 984t.
 
-2008-06-28  Eddy Petrișor <eddy.petrisor@gmail.com>
+2008-06-28  Eddy Petri?or <eddy.petrisor@gmail.com>
 
 	* ro.po: Updated to 984t.
 
