forward-ported the Romanian translation from the lenny branch

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-29  Eddy Petrișor <eddy.petrisor@gmail.com>
+
+	* ro.po: Updated to 984t (port from lenny branch).
+
 2008-07-19  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated to 984t.
