restore the correct encoding for the changelog files; Christian's editor broke my name once more

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,13 +25,13 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * Basque (Piarres Beobide). Closes: #490905
   * Korean (Changwoo Ryu).
   * Thai (Theppitak Karoonboonyanan). Closes: #488090
-  * Romanian (Eddy Petri?or).
+  * Romanian (Eddy Petrișor).
   * Russian (Yuri Kozlov). Closes: #488689
   * Slovak (Ivan Masár). Closes: #488903
   * French (Christian Perrier)
 
   [ Updated dselect translations ]
-  * Romanian (Eddy Petri?or).
+  * Romanian (Eddy Petrișor).
 
  -- Raphael Hertzog <hertzog@debian.org>  Wed, 18 Jun 2008 10:19:51 +0200
 
