--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -18,7 +18,7 @@
 
 	* ru.po: Updated to 984t.
 
-2008-06-28  Eddy Petri?or <eddy.petrisor@gmail.com>
+2008-06-28  Eddy Petrișor <eddy.petrisor@gmail.com>
 
 	* ro.po: Updated to 984t.
 
