Added Lithuanian translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,7 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * Russian (Yuri Kozlov). Closes: #488689
   * Slovak (Ivan Masár). Closes: #488903
   * French (Christian Perrier)
+  * Lithuanian (Gintautas Miliauskas). Closes: #493326
 
   [ Updated dselect translations ]
   * Romanian (Eddy Petrișor).
