Assign directly to l_r instead of a temporary variable

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-08-03  Guillem Jover  <guillem@debian.org>
 
+	* src/pkg-show.c (limiteddescription): Assign directly to l_r instead
+	of a temporary variable.
+
+2008-08-03  Guillem Jover  <guillem@debian.org>
+
 	* utils/start-stop-daemon.c: Move the different implementations
 	of the same function for different operating systems together.
 
