s-s-d: When checking for a pid call pid_is_exec on KVM systems

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-08-03  Guillem Jover  <guillem@debian.org>
 
+	* utils/start-stop-daemon.c (check) [HAVE_KVM_H]: Call pid_is_exec.
+
+2008-08-03  Guillem Jover  <guillem@debian.org>
+
 	* src/pkg-show.c (limiteddescription): Assign directly to l_r instead
 	of a temporary variable.
 
