s-s-d: Use kill instead of /proc to check for pid existence

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-08-03  Guillem Jover  <guillem@debian.org>
 
+	* utils/start-stop-daemon.c (pid_is_running) [!OSHURD]: Reimplement
+	using kill instead of less-portable /proc.
+
+2008-08-03  Guillem Jover  <guillem@debian.org>
+
 	* utils/start-stop-daemon.c (check) [HAVE_KVM_H]: Call pid_is_exec.
 
 2008-08-03  Guillem Jover  <guillem@debian.org>
