Unify usage of FIXME in comments

--- a/TODO
+++ b/TODO
@@ -6,6 +6,8 @@ lenny
 
  * Review this file and remove or update the old entries.
 
+ * Look for FIXME and XXX items in the source.
+
  * Triage as much bugs as possible to get the bug count below 300 ;) and
    merge as much patches as possible.
 
