TODO: Add new items

--- a/TODO
+++ b/TODO
@@ -109,6 +109,10 @@ lenny
 
  * Propagate --admindir to programs run from maintainer scritpts. (#97076)
 
+ * Fix conflicting action -%c, when short is 0.
+
+ * We should set our own obstack_alloc_failed_handler.
+
  * Fix quotes? <http://www.cl.cam.ac.uk/~mgk25/ucs/quotes.html>
 
 
