dpkg: Use blankpackageperfile instead of manually blanking the members

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-08-03  Guillem Jover  <guillem@debian.org>
 
+	* src/processarc.c (process_archive): Use blankpackageperfile instead
+	of manually blanking the members.
+	* src/remove.c (removal_bulk): Likewise.
+
+2008-08-03  Guillem Jover  <guillem@debian.org>
+
 	* utils/start-stop-daemon.c (pid_is_running) [!OSHURD]: Reimplement
 	using kill instead of less-portable /proc.
 
