Lithuanian translation added (?)

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,8 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * Russian (Yuri Kozlov). Closes: #488689
   * Slovak (Ivan Masár). Closes: #488903
   * French (Christian Perrier)
+
+  [ Added dpkg translations ]
   * Lithuanian (Gintautas Miliauskas). Closes: #493326
 
   [ Updated dselect translations ]
