--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-04  Cyril Brulebois  <kibi@debian.org>
+
+	* fr.po: Fixed mis-translation
+
 2008-07-22  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* de.po: Unify translation of "diversion".
