--- a/scripts/po/fr.po
+++ b/scripts/po/fr.po
@@ -338,7 +338,7 @@ msgstr "version source"
 
 #: scripts/dpkg-buildpackage.pl:296
 msgid "source changed by"
-msgstr "source changé en"
+msgstr "source changé par"
 
 #: scripts/dpkg-buildpackage.pl:324
 msgid "host architecture"
