Complete German scripts translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,7 +19,7 @@ dpkg (1.14.21) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
   * Russian (Yuri Kozlov). Closes: #490076
-  * German (Helge Kreutzmann)
+  * German (Helge Kreutzmann).
 
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #490905
@@ -28,7 +28,7 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * Romanian (Eddy Petrișor).
   * Russian (Yuri Kozlov). Closes: #488689
   * Slovak (Ivan Masár). Closes: #488903
-  * French (Christian Perrier)
+  * French (Christian Perrier).
 
   [ Added dpkg translations ]
   * Lithuanian (Gintautas Miliauskas). Closes: #493326
