--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-04  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Updated to 473t.
+
 2008-08-04  Cyril Brulebois  <kibi@debian.org>
 
 	* fr.po: Fixed mis-translation
