dpkg-distaddfile: Use _g() instead of wrong and typoed gettetx()

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-05  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-distaddfile.pl: Use _g() instead of wrong and typoed
+	gettetx().
+
 2008-08-03  Guillem Jover  <guillem@debian.org>
 
 	* src/processarc.c (process_archive): Use blankpackageperfile instead
