libdpkg: Use sizeof_array instead of ad-hoc calculation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-08-05  Guillem Jover  <guillem@debian.org>
 
+	* lib/ehandle.c: Include <dpkg-priv.h>.
+	(push_cleanup): Use sizeof_array instead of ad-hoc calculation.
+
+2008-08-05  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-scanpackages.pl: Use usageerr instead of embedded code.
 
 2008-08-05  Guillem Jover  <guillem@debian.org>
