Fix up packages in an inconsistent triggers-awaited state
When loading the status file fix up any inconsistent package in state
triggers-awaited w/o the corresponding package with pending triggers.

Closes: #487637, #486843, #489068

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,11 @@ dpkg (1.14.21) UNRELEASED; urgency=low
     in DEB_BUILD_OPTIONS (in order to conform with the Debian policy
     ruling established in #430649).
 
+  [ Guillem Jover ]
+  * When loading the status file fix up any inconsistent package in state
+    triggers-awaited w/o the corresponding package with pending triggers.
+    Closes: #487637, #486843, #489068
+
   [ Updated scripts translations ]
   * Russian (Yuri Kozlov). Closes: #490076
   * German (Helge Kreutzmann).
