dpkg: Do not assert when configure or remove produced too many errors
Closes: #483655

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-08-15  Ian Jackson  <ian@davenant.greenend.org.uk>
+
+	* src/packages.c (process_queue): When onerr_abort is bigger than 0
+	return instead of breaking out of the loop, to avoid wrongly
+	asserting that !queue.length.
+
 2008-08-15  Guillem Jover  <guillem@debian.org>
 
 	* lib/dbmodify.c (modstatdb_note): Do not call modstatdb_note_core if
