--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,9 @@ dpkg (1.14.21) UNRELEASED; urgency=low
     triggers-awaited w/o the corresponding package with pending triggers.
     Closes: #487637, #486843, #489068
   * Fix --no-act in triggers related code. Closes: #495097
+  * Do not assert when dpkg stops processing packages due to too many
+    errors occurred while configuring or removing packages.
+    Thanks to Ian Jackson <ian@davenant.greenend.org.uk>. Closes: #483655
 
   [ Updated scripts translations ]
   * Russian (Yuri Kozlov). Closes: #490076
