Mention (in comments) Svens copyright in the German man page as well

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-11  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po Mention (in comment) the copyright of Sven as well
+
 2008-07-22  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po Unify translation of "diversion"
