--- a/man/po/de.po
+++ b/man/po/de.po
@@ -2,12 +2,13 @@
 # This file is distributed under the same license as the dpkg package.
 # (C) Helge Kreutzmann <debian@helgefjell.de>, 2004, 2006-2008.
 # (C) Florian Rehnisch <eixman@gmx.de>, 2007.
+# (C) Sven Joachim <svenjoac@gmx.de>, 2008.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2008-06-03 21:58+0200\n"
-"PO-Revision-Date: 2008-07-22 19:00+0200\n"
+"PO-Revision-Date: 2008-08-11 19:28+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
