--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * When loading the status file fix up any inconsistent package in state
     triggers-awaited w/o the corresponding package with pending triggers.
     Closes: #487637, #486843, #489068
+  * Fix --no-act in triggers related code. Closes: #495097
 
   [ Updated scripts translations ]
   * Russian (Yuri Kozlov). Closes: #490076
