dpkg: Move lzma from Suggests to Pre-Depends
Closes: #456332

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * Do not assert when dpkg stops processing packages due to too many
     errors occurred while configuring or removing packages.
     Thanks to Ian Jackson <ian@davenant.greenend.org.uk>. Closes: #483655
+  * Move lzma from dpkg Suggests to Pre-Depends. Closes: #456332
 
   [ Updated scripts translations ]
   * Russian (Yuri Kozlov). Closes: #490076
