man/: Improve authentication and checksum support comment in .debsa
Closes: #492052

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Do not leave new conffile as .dpkg-new when it has been diverted, also
     properly activate the file trigger for the diverted conffile.
     Based on a patch by Timothy G Abbott. Closes: #58735, #476899
+  * Improve comment on BUGS section in dpkg-deb.1 about lack of authentication
+    and checksum support in .deb files. Closes: #492052
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
