--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * Modified Dpkg::BuildOptions to recognize and use spaces as separator
     in DEB_BUILD_OPTIONS (in order to conform with the Debian policy
     ruling established in #430649).
+  * Fix dpkg-source to not use -i and -I by default with "1.0" source
+    packages. Closes: #495138
 
   [ Guillem Jover ]
   * When loading the status file fix up any inconsistent package in state
