--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-08-15  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-buildpackage.pl (usage): Fix description of -si option.
+	* man/dpkg-buildpackage.1: Match description of -si option with the
+	one from dpkg-genchanges.1.
+
 2008-08-15  Raphael Hertzog  <hertzog@debian.org>
 
 	* Dpkg/Source/Package.pm (new): Call init_options() only if
