State that the preferred front-end is aptitude
All instances recommending dselect cannot be changed yet as it's the
only front-end right now directly changing dpkg pkg selections. Replace
also one instance of dselect usage with 'apt-get dselect-upgrade' which
honours those selections, though. Closes: #483785

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-08-17  Guillem Jover  <guillem@debian.org>
+
+	* man/dpkg.1: Change reference to dselect as being the preferred
+	fron-end to aptitude. And 'apt-get dselect-upgrade' to be used to
+	act on the current package selections. Add references to aptitude
+	and apt man pages in 'SEE ALSO'.
+
 2008-08-16  Guillem Jover  <guillem@debian.org>
 
 	* src/main.c (setpipe): Set file descriptors to close on exec.
