--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -19,7 +19,7 @@ packages are particularly inadequate.
 .SH DESCRIPTION
 \fBdpkg\fP is a tool to install, build, remove and manage
 Debian packages. The primary and more user-friendly
-front-end for \fBdpkg\fP is \fBdselect\fP(1). \fBdpkg\fP itself is
+front-end for \fBdpkg\fP is \fBaptitude\fP(1). \fBdpkg\fP itself is
 controlled entirely via command line parameters, which consist of exactly
 one action and zero or more options. The action-parameter tells \fBdpkg\fP
 what to do and options control the behavior of the action in some way.
@@ -641,7 +641,7 @@ with:
 Note that this will not actually install or remove anything, but just
 set the selection state on the requested packages. You will need some
 other application to actually download and install the requested
-packages. For example, run \fBdselect\fP and choose \fIInstall\fP.
+packages. For example, run \fBapt\-get dselect-upgrade\fP.
 
 Ordinarily, you will find that \fBdselect\fP(1) provides a more
 convenient way to modify the package selection states.
@@ -652,6 +652,8 @@ Additional functionality can be gained by installing any of the
 following packages: \fBapt\fR, \fBaptitude\fR and \fBdebsums\fR.
 .
 .SH SEE ALSO
+\fBaptitude\fP(1),
+\fBapt\fP(1),
 \fBdselect\fP(1),
 \fBdpkg\-deb\fP(1),
 \fBdpkg\-query\fP(1),
