--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,8 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * Move lzma from dpkg Suggests to Pre-Depends. Closes: #456332
   * Match description of -si option in dpkg-buildpackage to the one in
     dpkg-genchanges. Closes: #493743
+  * State that the preferred front-end is aptitude and replace one instance
+    of dselect usage with apt-get. Closes: #483785
 
   [ Updated scripts translations ]
   * Russian (Yuri Kozlov). Closes: #490076
