--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -9,7 +9,7 @@
 
 2008-08-04  Cyril Brulebois  <kibi@debian.org>
 
-	* fr.po: Fixed mis-translation
+	* fr.po: Fixed mis-translation.
 
 2008-07-22  Helge Kreutzmann  <debian@helgefjell.de>
 
@@ -42,7 +42,7 @@
 
 2008-06-07  Christian perrier  <bubulle@debian.org>
 
-	* fr.po: Updated to 471t
+	* fr.po: Updated to 471t.
 
 2008-06-06  Wiktor Wandachowicz  <siryes@gmail.com>
 
@@ -58,7 +58,7 @@
 
 2008-05-13  Christian perrier  <bubulle@debian.org>
 
-	* fr.po: 326t78f67u
+	* fr.po: Updated to 326t78f67u.
 
 2008-05-13  Peter Karlsson  <peterk@debian.org>
 
