--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-17  Guillem Jover  <guillem@debian.org>
+
+	* LINGUAS: Add Lithuanian.
+
 2008-08-02  Gintautas Miliauskas  <gintas@akl.lt>
 
 	* lt.po: Added as 626t54f304u
