man/: Use a troff special character for the copyright symbol

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,27 @@
+2008-08-18  Guillem Jover  <guillem@debian.org>
+
+	* man/cleanup-info.8: Use a troff special character for the copyright
+	symbol.
+	* man/deb-substvars.5: Likewise.
+	* man/deb-version.5: Likewise.
+	* man/dpkg-buildpackage.1: Likewise.
+	* man/dpkg-checkbuilddeps.1: Likewise.
+	* man/dpkg-deb.1: Likewise.
+	* man/dpkg-distaddfile.1: Likewise.
+	* man/dpkg-divert.8: Likewise.
+	* man/dpkg-genchanges.1: Likewise.
+	* man/dpkg-gencontrol.1: Likewise.
+	* man/dpkg-gensymbols.1: Likewise.
+	* man/dpkg-name.1: Likewise.
+	* man/dpkg-parsechangelog.1: Likewise.
+	* man/dpkg-query.1: Likewise.
+	* man/dpkg-shlibdeps.1: Likewise.
+	* man/dpkg-source.1: Likewise.
+	* man/dpkg-split.1: Likewise.
+	* man/dpkg-statoverride.8: Likewise.
+	* man/install-info.8: Likewise.
+	* man/update-alternatives.8: Likewise.
+
 2008-08-15  Guillem Jover  <guillem@debian.org>
 
 	* man/dpkg-deb.1 (BUGS): Improve comment about missing authentication
