--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     Based on a patch by Timothy G Abbott. Closes: #58735, #476899
   * Improve comment on BUGS section in dpkg-deb.1 about lack of authentication
     and checksum support in .deb files. Closes: #492052
+  * Use a troff special character for the copyright symbol on man pages.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
