--- a/man/deb-substvars.5
+++ b/man/deb-substvars.5
@@ -1,5 +1,5 @@
 .\" Authors: Ian Jackson
-.TH deb\-substvars 5 "2007-07-18" "Debian Project" "dpkg utilities"
+.TH deb\-substvars 5 "2008-08-18" "Debian Project" "dpkg utilities"
 .SH NAME
 deb\-substvars \- Debian source substitution variables
 .
@@ -134,9 +134,9 @@ standard output field settings is rather confused.
 .BR dpkg\-source (1).
 .
 .SH AUTHOR
-Copyright (C) 1995-1996 Ian Jackson
+Copyright \(co 1995-1996 Ian Jackson
 .br
-Copyright (C) 2000 Wichert Akkerman
+Copyright \(co 2000 Wichert Akkerman
 .sp
 This is free software; see the GNU General Public Licence version 2 or
 later for copying conditions. There is NO WARRANTY.
