--- a/man/deb-version.5
+++ b/man/deb-version.5
@@ -2,7 +2,7 @@
 .\" The copyright given below is that of the whole policy, but probably
 .\" incomplete.
 .\" Conversion to roff by Frank Lichtenheld
-.TH deb\-version 5 "2007-10-06" "Debian Project" "Debian"
+.TH deb\-version 5 "2008-08-18" "Debian Project" "Debian"
 .SH NAME
 deb\-version \- Debian package version number format
 .
@@ -118,9 +118,9 @@ support for it later in the 1.10.x series.
 .BR deb (5),
 .BR dpkg (1)
 .SH AUTHORS
-Copyright (C) 1996,1997,1998 Ian Jackson and Christian Schwarz
+Copyright \(co 1996,1997,1998 Ian Jackson and Christian Schwarz
 .br
-Copyright (C) 2007 Frank Lichtenheld
+Copyright \(co 2007 Frank Lichtenheld
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
