--- a/man/dpkg-buildpackage.1
+++ b/man/dpkg-buildpackage.1
@@ -1,4 +1,4 @@
-.TH dpkg\-buildpackage 1 "2008-07-10" "Debian Project" "dpkg utilities"
+.TH dpkg\-buildpackage 1 "2008-08-18" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-buildpackage \- build binary or source packages from sources
 .
@@ -292,13 +292,13 @@ and initial arguments for
 .BR gpg (1).
 .
 .SH AUTHORS
-Copyright (C) 1995-1996 Ian Jackson
+Copyright \(co 1995-1996 Ian Jackson
 .br
-Copyright (C) 2000 Wichert Akkerman
+Copyright \(co 2000 Wichert Akkerman
 .br
-Copyright (C) 2007 Frank Lichtenheld
+Copyright \(co 2007 Frank Lichtenheld
 .br
-Copyright (C) 2008 Rapha\[:e]l Hertzog
+Copyright \(co 2008 Rapha\[:e]l Hertzog
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
