--- a/man/dpkg-checkbuilddeps.1
+++ b/man/dpkg-checkbuilddeps.1
@@ -1,4 +1,4 @@
-.TH dpkg\-checkbuilddeps 1 "2008-03-14" "Debian Project" "dpkg utilities"
+.TH dpkg\-checkbuilddeps 1 "2008-08-18" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-checkbuilddeps \- check build dependencies and conflicts
 .
@@ -35,7 +35,7 @@ Use the given build dependencies/conflicts instead of those contained in the
 Show the usage message and exit.
 .
 .SH AUTHOR
-Copyright (C) 2001 Joey Hess
+Copyright \(co 2001 Joey Hess
 .sp
 This is free software; see the GNU General Public Licence version 2 or
 later for copying conditions. There is NO WARRANTY.
