--- a/man/dpkg-deb.1
+++ b/man/dpkg-deb.1
@@ -1,4 +1,4 @@
-.TH dpkg\-deb 1 "2007-09-08" "Debian Project" "dpkg suite"
+.TH dpkg\-deb 1 "2008-08-18" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg\-deb \- Debian package archive (.deb) manipulation tool
 .
@@ -246,7 +246,7 @@ package's scripts run and its status and contents recorded.
 .BR dselect (1).
 .
 .SH AUTHOR
-Copyright (C) 1995-1996 Ian Jackson
+Copyright \(co 1995-1996 Ian Jackson
 .sp
 This is free software; see the GNU General Public Licence version 2 or
 later for copying conditions. There is NO WARRANTY.
