--- a/man/dpkg-distaddfile.1
+++ b/man/dpkg-distaddfile.1
@@ -1,4 +1,4 @@
-.TH dpkg\-distaddfile 1 "2007-03-07" "Debian Project" "dpkg utilities"
+.TH dpkg\-distaddfile 1 "2008-08-18" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-distaddfile \- add entries to debian/files
 .
@@ -45,9 +45,9 @@ prepared.
 can be used to add additional files.
 .
 .SH AUTHORS
-Copyright (C) 1995-1996 Ian Jackson
+Copyright \(co 1995-1996 Ian Jackson
 .br
-Copyright (C) 2000 Wichert Akkerman
+Copyright \(co 2000 Wichert Akkerman
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
