--- a/man/dpkg-genchanges.1
+++ b/man/dpkg-genchanges.1
@@ -1,4 +1,4 @@
-.TH dpkg\-genchanges 1 "2007-07-18" "Debian Project" "dpkg utilities"
+.TH dpkg\-genchanges 1 "2008-08-18" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-genchanges \- generate Debian .changes files
 .
@@ -144,9 +144,9 @@ reads the data here when producing a
 file.
 .
 .SH AUTHORS
-Copyright (C) 1995-1996 Ian Jackson
+Copyright \(co 1995-1996 Ian Jackson
 .br
-Copyright (C) 2000 Wichert Akkerman
+Copyright \(co 2000 Wichert Akkerman
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
