--- a/man/dpkg-gencontrol.1
+++ b/man/dpkg-gencontrol.1
@@ -1,4 +1,4 @@
-.TH dpkg\-gencontrol 1 "2008-03-02" "Debian Project" "dpkg utilities"
+.TH dpkg\-gencontrol 1 "2008-08-18" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-gencontrol \- generate Debian control files
 .
@@ -138,11 +138,11 @@ adds the presumed filenames of binary packages whose control files it
 generates here.
 .
 .SH AUTHORS
-Copyright (C) 1995-1996 Ian Jackson
+Copyright \(co 1995-1996 Ian Jackson
 .br
-Copyright (C) 2000 Wichert Akkerman
+Copyright \(co 2000 Wichert Akkerman
 .br
-Copyright (C) 2007-2008 Rapha\[:e]l Hertzog
+Copyright \(co 2007-2008 Rapha\[:e]l Hertzog
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
