--- a/man/dpkg-gensymbols.1
+++ b/man/dpkg-gensymbols.1
@@ -1,5 +1,5 @@
 .\" Author: Raphael Hertzog
-.TH dpkg\-gensymbols 1 "2007-07-16" "Debian Project" "dpkg utilities"
+.TH dpkg\-gensymbols 1 "2008-08-18" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-gensymbols \- generate symbols files (shared library dependency information)
 .
@@ -190,7 +190,7 @@ Show the version and exit.
 .BR dpkg\-shlibdeps (1).
 .
 .SH AUTHORS
-Copyright (C) 2007 Rapha\[:e]l Hertzog
+Copyright \(co 2007 Rapha\[:e]l Hertzog
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
