--- a/man/install-info.8
+++ b/man/install-info.8
@@ -2,7 +2,7 @@
 .\"
 .\" This is free software; see the GNU General Public Licence version 2
 .\" or later for copying conditions.  There is NO warranty.
-.TH install\-info 8 "2007-07-18" "Debian Project" "dpkg utilities"
+.TH install\-info 8 "2008-08-18" "Debian Project" "dpkg utilities"
 .SH NAME
 install\-info \- create or update entry in Info dir file
 .
@@ -289,7 +289,7 @@ processing steps are shown.
 .BR info (1),
 .BR gzip(1).
 .SH AUTHOR
-Copyright (C) 1994 Ian Jackson
+Copyright \(co 1994 Ian Jackson
 .sp
 This is free software; see the GNU General Public Licence version 2 or
 later for copying conditions. There is NO WARRANTY.
