--- a/man/dpkg-divert.8
+++ b/man/dpkg-divert.8
@@ -1,4 +1,4 @@
-.TH dpkg\-divert 8 "2007-07-18" "Debian Project" "dpkg utilities"
+.TH dpkg\-divert 8 "2008-08-18" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-divert \- override a package's version of a file
 .
@@ -123,7 +123,7 @@ Note: \fBdpkg\-divert\fP preserves the old copy of this file, with extension
 .BR dpkg (1).
 .
 .SH AUTHOR
-Copyright (C) 1995 Ian Jackson
+Copyright \(co 1995 Ian Jackson
 .sp
 This is free software; see the GNU General Public Licence version 2 or
 later for copying conditions. There is NO WARRANTY.
