--- a/man/dpkg-parsechangelog.1
+++ b/man/dpkg-parsechangelog.1
@@ -1,4 +1,4 @@
-.TH dpkg\-parsechangelog 1 "2008-01-13" "Debian Project" "dpkg utilities"
+.TH dpkg\-parsechangelog 1 "2008-08-18" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-parsechangelog \- parse Debian changelog files
 .
@@ -120,11 +120,11 @@ the changes made since a particular release, and the source version
 number itself.
 .
 .SH AUTHORS
-Copyright (C) 1995-1996 Ian Jackson
+Copyright \(co 1995-1996 Ian Jackson
 .br
-Copyright (C) 2000 Wichert Akkerman
+Copyright \(co 2000 Wichert Akkerman
 .br
-Copyright (C) 2007, 2008 Frank Lichtenheld
+Copyright \(co 2007, 2008 Frank Lichtenheld
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
