--- a/man/dpkg-shlibdeps.1
+++ b/man/dpkg-shlibdeps.1
@@ -1,4 +1,4 @@
-.TH dpkg\-shlibdeps 1 "2008-03-25" "Debian Project" "dpkg utilities"
+.TH dpkg\-shlibdeps 1 "2008-08-18" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-shlibdeps \- generate shared library substvar dependencies
 .
@@ -328,13 +328,13 @@ don't understand why it's giving you this error.
 .BR dpkg\-gensymbols (1).
 .
 .SH AUTHORS
-Copyright (C) 1995-1996 Ian Jackson
+Copyright \(co 1995-1996 Ian Jackson
 .br
-Copyright (C) 2000 Wichert Akkerman
+Copyright \(co 2000 Wichert Akkerman
 .br
-Copyright (C) 2006 Frank Lichtenheld
+Copyright \(co 2006 Frank Lichtenheld
 .br
-Copyright (C) 2007-2008 Rapha\[:e]l Hertzog
+Copyright \(co 2007-2008 Rapha\[:e]l Hertzog
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
