--- a/man/dpkg-split.1
+++ b/man/dpkg-split.1
@@ -1,5 +1,5 @@
 .\" Authors: Ian Jackson
-.TH dpkg\-split 1 "2007-07-18" "Debian Project" "dpkg utilities"
+.TH dpkg\-split 1 "2008-08-18" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-split \- Debian package archive split/join tool
 .
@@ -230,7 +230,7 @@ filename format should not be relied upon.
 .BR dpkg (1).
 .
 .SH AUTHOR
-Copyright (C) 1995-1996 Ian Jackson
+Copyright \(co 1995-1996 Ian Jackson
 .sp
 This is free software; see the GNU General Public Licence version 2 or
 later for copying conditions. There is NO WARRANTY.
