--- a/man/dpkg-statoverride.8
+++ b/man/dpkg-statoverride.8
@@ -1,4 +1,4 @@
-.TH dpkg\-statoverride 8 "2007-07-18" "Debian project" "dpkg utilities"
+.TH dpkg\-statoverride 8 "2008-08-18" "Debian project" "dpkg utilities"
 .SH NAME
 dpkg\-statoverride \- override ownership and mode of files
 .
@@ -79,7 +79,7 @@ extension "\-old", before replacing it with the new one.
 .BR dpkg (1).
 .
 .SH AUTHOR
-Copyright (C) 2000 Wichert Akkerman
+Copyright \(co 2000 Wichert Akkerman
 .sp
 This is free software; see the GNU General Public Licence version 2 or
 later for copying conditions. There is NO WARRANTY.
