--- a/man/update-alternatives.8
+++ b/man/update-alternatives.8
@@ -5,7 +5,7 @@
 .\" by the Free Software Foundation; either version 2 of the License, or
 .\" (at your option) any later version.  There is NO WARRANTY.  You can
 .\" find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
-.TH update\-alternatives 8 "2007-07-18" "Debian Project" "dpkg utilities"
+.TH update\-alternatives 8 "2008-08-18" "Debian Project" "dpkg utilities"
 .SH NAME
 update\-alternatives \- maintain symbolic links determining default commands
 .
@@ -462,7 +462,7 @@ and this manual page, it is a bug,
 either in the implementation or the documentation; please report it.
 .
 .SH AUTHOR
-Copyright (C) 1995 Ian Jackson
+Copyright \(co 1995 Ian Jackson
 .sp
 This is free software; see the GNU General Public Licence version 2 or
 later for copying conditions. There is NO WARRANTY.
